discussion/kv_engine/187792/187792_rev13_discussion.txt
======================================================================================================================
DESCRIPTION:

Change the protocol specification to be usable on the server

Uniquely identify the "URL" of a document by inserting
the scope id, collection id, vbucket id in the request.
By keeping this in its own message we only need to
document it once (and changes / bug fixes only needs
to be fixed in one place rather in all messages which
needs the extension later on)

The scope/collection id vs names is an optimization so
that the server don't need to perform the textual lookup
every time (and in order for sane operation the client
would have to pass along the uuid to avoid undefined
behavior after a drop/recreate).

By passing along the vbucket id the server don't need
to be in the "proxy business" and can leave that to
a stellar gateway or the client. (The stellar gateway
could tell the clients that it is responsible for all
vbuckets and perform all proxying and not-my-vbucket
handling).

I've not looked at the returned data.

Change-Id: I98a9140b99b11540c5b2a6b94096b63d8c842551

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-03-07 13:52:02.000000000
Message: 
Uploaded patch set 13.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-03-07 14:32:27.000000000
Message: 
Patch Set 13: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22871/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_command_context.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_cookie.h:20:10: error: "grpcpp/server.h" file not found [clang-diagnostic-error]
#include <grpcpp/server.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/grpc/main.cc:17:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22871/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_command_context.h:19:10:
error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22871/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23099/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/programs/grpc/main.cc b/programs/grpc/main.cc
index 6d08c484b..c0aa0cda9 100644
--- a/programs/grpc/main.cc
+++ b/programs/grpc/main.cc
@@ -34,8 +34,7 @@ void updateDocumentLocation(const nlohmann::json&amp; j,
         location.set_bucket(j.at(&quot;bucket_name&quot;).get&lt;std::string&gt;());
     }
     if (j.contains(&quot;collection_id&quot;)) {
-        location.set_collection_id(
-                j.at(&quot;collection_id&quot;).get&lt;uint32_t&gt;());
+        location.set_collection_id(j.at(&quot;collection_id&quot;).get&lt;uint32_t&gt;());
     }
 
     if (j.contains(&quot;scope_name&quot;)) {
@@ -85,19 +84,22 @@ void to_json(nlohmann::json&amp; json, const UnlockResponse&amp; response) {
 void from_json(const nlohmann::json&amp; j, MutateRequest&amp; request) {
     updateDocumentLocation(j, *request.mutable_document());
     if (j.contains(&quot;content&quot;)) {
-        request.mutable_content()-&gt;set_content(j.at(&quot;content&quot;).get&lt;std::string&gt;());
+        request.mutable_content()-&gt;set_content(
+                j.at(&quot;content&quot;).get&lt;std::string&gt;());
     }
     if (j.contains(&quot;content-type&quot;)) {
         if (j[&quot;content-type&quot;] == &quot;json&quot;) {
             request.mutable_content()-&gt;set_content_type(Value_ContentType_JSON);
         } else if (j[&quot;content-type&quot;] == &quot;binary&quot;) {
-            request.mutable_content()-&gt;set_content_type(Value_ContentType_BINARY);
+            request.mutable_content()-&gt;set_content_type(
+                    Value_ContentType_BINARY);
         }
     }
 
     if (j.contains(&quot;compression-type&quot;)) {
         if (j[&quot;compression-type&quot;] == &quot;snappy&quot;) {
-            request.mutable_content()-&gt;set_compression_type(Value_CompressionType_SNAPPY);
+            request.mutable_content()-&gt;set_compression_type(
+                    Value_CompressionType_SNAPPY);
         }
     }
 

EOF
</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23099/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24506/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24506/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25392/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeDownMemoryUsageHigh/magma_persistent_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeDownMemoryUsageHigh/magma_persistent_full_eviction
[2023-03-07T14:23:00.035Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:134: Failure
[2023-03-07T14:23:00.035Z] Expected: (0) != (cb::ArenaMalloc::getPreciseAllocated(engine->getArenaMallocClient(), cb::MemoryDomain::Primary)), actual: 0 vs 0
[2023-03-07T14:23:00.035Z] [  FAILED  ] EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeDownMemoryUsageHigh/magma_persistent_full_eviction, where GetParam() = "backend=magma:bucket_type=persistent:item_eviction_policy=full_eviction" (623 ms)
EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeDownMemoryUsageHigh/magma_persistent_full_eviction
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25392/ )

Timeout of a CTest test [2023-03-07T14:26:40.748Z]  12/479 Test #276: ep-engine_ep_unit_tests.EphemeralOrPersistent/STItemPagerTest ...........................................} ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25392/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43887/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52321/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12603/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12683/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24934/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26245/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33350/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1671/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
